# kerbx-flightsystems

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
avionics/: Cargo.toml
avionics/src/: lib.rs  main.rs
flightplanner/: Cargo.toml
flightplanner/src/: lib.rs  main.rs
libkerbx/: Cargo.toml  build.rs
libkerbx/protos/: kerbx.proto
libkerbx/src/: flightplan.rs  lib.rs
src/: lib.rs  main.rs  sixdof.rs
utilities/flightplan-creator/: Cargo.toml
utilities/flightplan-creator/src/: main.rs
