[package]
name = "flightplanner"
version = "0.1.0"
authors = ["Dr. Whom Ph.D. <drwhom@outlook.com>", "stellaskyler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkerbx = { path = "../libkerbx" }
clap = "2.33.*"
termion = "1.5.*"
krpc_mars = { git = "https://github.com/drwhomphd/krpc-mars.git"}