[package]
name = "libkerbx"
version = "0.1.0"
authors = ["Dr. Whom Ph.D. <drwhom@outlook.com>", "stellaskyler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.28.*"
krpc_mars = { git = "https://github.com/drwhomphd/krpc-mars.git"}
contracts = "0.6.*"
protobuf = "2.*"
serde = "1.*"
serde_json = "1.*"

[build-dependencies]
glob = "*"
protoc-rust = "2.*"
krpc_mars_terraformer = { git = "https://github.com/drwhomphd/krpc-mars-terraformer.git", branch = "main" }