[package]
name = "flightplan-creator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.*"
serde_json = "1.*"
libkerbx = { path = "../../libkerbx", features = ["with-serde"] }
clap = "2.33.*"